--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "body-parser": "^1.20.4",
     "cors": "^2.8.5",
     "express": "^4.22.1",
-    "mongoose": "^7.8.8",
-    "ngrok": "^5.0.0-beta.2",
-    "selfsigned": "^2.1.1"
+    "mongoose": "^7.8.8"
   },
   "devDependencies": {
     "jest": "^29.7.0",
